			   XPCE ChangeLog
			   ==============

VERSION 6.0.3, distributed with SWI-Prolog 5.0.3
================================================

* FIXED: WSAEWOULDBLOCK problems in windows socket layer.

* INSTALL: Properly install swipl.rc in the MacOS version to bind XPCE
  to the normal Prolog executable swipl.

* FIXED/MODIFIED: `stream <-read_line': timeout argument is now a float
  representing timeout in seconds for compatibility with other time
  specifiers.  Return is now @nil timeout, failure on end-of-input.
  Behaviour between Windows and Unix version is consistent.

* FIXED: `frame->geometry' on Windows with negative X and Y.  ->geometry now
  ensures part of the title-bar of the window is visible, so you can move and
  resize the window.

* ADDED: `list_browser->selection_style' as a method.

* FIXED: Help-balloons on loc-still

* FIXED: make rpm-install: install the manual search index.

* FIXED: Search form of the XPCE HTTP manual (from xpce/prolog/lib/http)


VERSION 6.0.2, distributed with SWI-Prolog 5.0.2
================================================

* FIXED: Error handling red-slider in HSV colour demo (Geof Bishop).

* FIXED: Draw the label of tab objects that are not `on top'.

* PORT: MacOS X.  Changed:
	- Fixed xpm header detection if not in default path
	- Added __unix__ to config.h
	- Fixed configure to deal with shells where eval "" fails
	- Use plld -shared to link the pl2xpce.so shared object
	- Allow for different-named executable Prolog (swipl)
	- Use hacky function + call in ker/glob.c to work around
	  a bug in the linker.
	- See the SWI-Prolog twiki web for more info.

* ADDED: Allow for `editor->style: Name, @nil' to delete the given style from
  the editor.

* ADDED: Many PceEmacs goodies for Prolog mode
	- Colour arguments to all (declared) meta-calls
	- Better handling of explicit cross-module calls and definitions
	- Precompile prolog_mode.pl and related files to qlf to speed up
	  loading on slow machines.